--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,26 +1,58 @@
 #sub_path_only rewrite ^__PATH__$ __PATH__/ permanent;
+
 location __PATH__/ {
-	
+
 	# Path to source
 	alias __INSTALL_DIR__/;
-	
+
 	index index.php;
-	
+
 	# Common parameter to increase upload size limit in conjunction with dedicated php-fpm file
 	client_max_body_size 256M;
-	
+
 	try_files $uri $uri/ index.php;
 	location ~ [^/]\.php(/|$) {
 		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 		fastcgi_pass unix:/var/run/php/php__PHPVERSION__-fpm-__NAME__.sock;
-		
+
 		fastcgi_index index.php;
 		include fastcgi_params;
 		fastcgi_param REMOTE_USER $remote_user;
 		fastcgi_param PATH_INFO $fastcgi_path_info;
 		fastcgi_param SCRIPT_FILENAME $request_filename;
 	}
-	
-	# Include SSOWAT user panel.
-	#include conf.d/yunohost_panel.conf.inc;
+
+	# Protections
+	location ~ /\.ht {
+		return 404;
+	}
+	location ~ ^__PATH__/core/class/|core/class/phpmailer/ {
+		return 404;
+	}
+	location ~ ^__PATH__/core/vendor/filemanager/config/ {
+		return 404;
+	}
+	location ~ ^__PATH__/core/module/config/tool/data.key {
+		return 404;
+	}
+	location ~ ^__PATH__/core/module/install/ressource/*.json {
+		return 404;
+	}
+	location ~ ^__PATH__/core/module/user/ressource/ {
+		return 404;
+		location ~ template.csv$ {}
+	}
+	location ~ ^__PATH__/site/backup/ {
+		return 404;
+	}
+	location ~ ^__PATH__/site/tmp/ {
+		return 404;
+		location ~ \.png$ {}
+	}
+	location ~ ^__PATH__/site/data/*.json {
+		return 404;
+	}
+	location ~ ^__PATH__/site/data/*.log {
+		return 404;
+	}
 }
