Fix access to config page

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -24,35 +24,45 @@ location __PATH__/ {
 
 	# Protections
 	location ~ /\.ht {
+		deny all;
 		return 404;
 	}
-	location ~ ^__PATH__/core/class/|core/class/phpmailer/ {
+	location ~ ^__PATH__/core/class/ {
+		deny all;
+		return 404;
+	}
+	location ~ ^__PATH__/core/class/phpmailer/ {
+		deny all;
 		return 404;
 	}
 	location ~ ^__PATH__/core/vendor/filemanager/config/ {
+		deny all;
 		return 404;
 	}
 	location ~ ^__PATH__/core/module/config/tool/data.key {
+		deny all;
 		return 404;
 	}
 	location ~ ^__PATH__/core/module/install/ressource/*.json {
+		deny all;
 		return 404;
 	}
 	location ~ ^__PATH__/core/module/user/ressource/ {
+		deny all;
 		return 404;
 		location ~ template.csv$ {}
 	}
 	location ~ ^__PATH__/site/backup/ {
+		deny all;
 		return 404;
 	}
 	location ~ ^__PATH__/site/tmp/ {
+		deny all;
 		return 404;
 		location ~ \.png$ {}
 	}
-	location ~ ^__PATH__/site/data/*.json {
-		return 404;
-	}
-	location ~ ^__PATH__/site/data/*.log {
+	location ~ ^__PATH__/site/data/.*\.(json|log)$ {
+		deny all;
 		return 404;
 	}
 }
