--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -50,7 +50,9 @@ location __PATH__/ {
 	location ~ ^__PATH__/core/module/user/ressource/ {
 		deny all;
 		return 404;
-		location ~ template.csv$ {}
+		location ~ template.csv$ {
+			allow all;
+		}
 	}
 	location ~ ^__PATH__/site/backup/ {
 		deny all;
@@ -59,7 +61,9 @@ location __PATH__/ {
 	location ~ ^__PATH__/site/tmp/ {
 		deny all;
 		return 404;
-		location ~ \.png$ {}
+		location ~ \.png$ {
+			allow all;
+		}
 	}
 	location ~ ^__PATH__/site/data/.*\.(json|log)$ {
 		deny all;
