Add rewrites to nginx

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -22,6 +22,11 @@ location __PATH__/ {
 		fastcgi_param SCRIPT_FILENAME $request_filename;
 	}
 
+	# Rewrites
+	location __PATH__/files/ {
+		alias __INSTALL_DIR__/site/file/source/;
+	}
+
 	# Protections
 	location ~ /\.ht {
 		deny all;
